--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ ui_*.h
 *.jsc
 Makefile*
 *build-*
+build
 *.qm
 *.prl
 
@@ -52,3 +53,15 @@ compile_commands.json
 *creator.user*
 
 *_qmlcache.qrc
+
+# IDE config files
+.idea
+.vscode
+
+# System files
+.DS_Store
+Thumbs.db
+
+# Output directories
+dist
+package
