feat: 实现蓝牙设备的扫描, 配对, 收藏, 过滤和连接功能
- 支持打开/关闭蓝牙
- 支持扫描周围蓝牙设备
- 支持设备过滤器
- 支持按 RSSI 值降序排列设备
- 支持收藏/取消收藏设备
- 支持配对/取消配对设备
- 支持查看和管理已收藏的蓝牙设备
- 支持连接到选定设备并获取服务, 特征, 描述符的 UUID 等信息

--- a/BleHelper/CMakeLists.txt
+++ b/BleHelper/CMakeLists.txt
@@ -14,7 +14,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # 导入Qt相关依赖包
-find_package(Qt6 REQUIRED COMPONENTS Core Gui Quick)
+find_package(Qt6 REQUIRED COMPONENTS Bluetooth Core Gui Quick)
 
 # 获取当前构建时间
 string(TIMESTAMP BUILD_DATE_TIME "%Y-%m-%d %H:%M:%S")
@@ -105,11 +105,12 @@ qt_add_resources(
 target_include_directories(
   ${PROJECT_NAME}
   PRIVATE ${CMAKE_SOURCE_DIR}/FluentUI ${CMAKE_CURRENT_SOURCE_DIR}/src
+          ${CMAKE_CURRENT_SOURCE_DIR}/src/ble
           ${CMAKE_CURRENT_SOURCE_DIR}/src/common)
 
 # 目标文件链接库
-target_link_libraries(${PROJECT_NAME} PRIVATE Qt6::Core Qt6::Gui Qt6::Quick
-                                              fluentuiplugin)
+target_link_libraries(${PROJECT_NAME} PRIVATE Qt6::Bluetooth Qt6::Core Qt6::Gui
+                                              Qt6::Quick fluentuiplugin)
 
 if(${QT_VERSION} VERSION_LESS 6.1.0)
   set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER
